[package]
name = "cli-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
structopt = "0.3.13"
anyhow = "1.0"
indicatif = "0.16.2"
serde_json = "1.0.73"
reqwest = { features = ["blocking"] }
ansi_term = "0.12.1"
error-chain = "0.12.4"
data-encoding = "2.3.2"
ring = "0.16.20"
tokio = { version = "1.2", features = ["macros"] }
