[package]
name = "grrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0" 
indicatif = "0.16.2"
log = "0.4.0"
env_logger = "0.8.4"
console = "0.14.1"
rand = "0.8.4"
